.. Author notes: this file is formatted with restructured text
(http://docutils.sourceforge.net/docs/user/rst/quickstart.html)
as it is included in Scrooge's user's guide.

4.x
-----

4.12.0
------

- scrooge-generator: Remove check for 22 args when generating scala 
  ServiceIface. Now that we no longer support Scala 2.10 we can always
  generate a case class for the generated scala ServiceIface. 
  ``RB_ID=882203``
- scrooge-generator: Don't allow Structs and Typedefs with the same 
  identifier. Structs and typedefs should not have the same name. This
  makes it difficult to properly support self-referencing types. 
  ``RB_ID=881684``
- scrooge-generator: Fix pathological case for self-referencing
  types with Java generation. ``RB_ID=880813``

4.11.0
------

- scrooge-generator: Add support for self-referencing types from 
  `pinsri` via https://github.com/twitter/scrooge/pull/244 
  ``RB_ID=873802``

- scrooge: Remove unmaintained bin/ directory. ``RB_ID=873411``

4.10.0
------

No Changes

4.9.0
------

No Changes

- scrooge-core: `c.t.scrooge.TReusableMemoryTransport` now uses TUnboundedByteArrayOutputStream
  instead of TByteArrayOutputStream to avoid buffer reallocation on reset.

4.8.0
------

Breaking API Changes
~~~~~~~~~~~~~~~~~~~~

- scrooge-sbt-plugin: Allow scrooge to build bindings for more than one
  language. To reflect this, `ScroogeSBT.autoImport.scroogeLanguage` has been
  renamed to `scroogeLanguages` and is now a `SettingKey[Seq[String]]`
  instead of a `SettingKey[String].` ``RB_ID=846198``

- Builds are now only for Java 8 and Scala 2.11. See the
  `blog post <https://finagle.github.io/blog/2016/04/20/scala-210-and-java7/>`_
  for details. ``RB_ID=828898``

~~~~~

4.7.0
-----

- scrooge-core, scrooge-generator: `c.t.scrooge.ThriftEnum` now includes an
  `originalName` method which represents the name as defined in the Thrift
  IDL file. ``RB_ID=820075``

4.6.0
-----

- scrooge-ostrich: Removed scrooge-ostrich module