@@ -1,0 +1,75 @@
+namespace java com.twitter.test
+#@namespace scala com.twitter.test
+
+service NonOptimalServiceMethodsWarn {
+  string  a()
+  string  b()
+  string  c()
+  string  d()
+  string  e()
+  string  f()
+  string  g()
+  string  h()
+  string  i()
+  string  j()
+  string a1()
+  string b1()
+  string c1()
+  string d1()
+  string e1()
+  string f1()
+  string g1()
+  string h1()
+  string i1()
+  string j1()
+  string a2()
+  string b2()
+  string c2()
+  string d2()
+  string e2()
+  string f2()
+  string g2()
+  string h2()
+  string i2()
+  string j2()
+  string a3()
+  string b3()
+  string c3()
+  string d3()
+  string e3()
+  string f3()
+  string g3()
+  string h3()
+  string i3()
+  string j3()
+  string a4()
+  string b4()
+  string c4()
+  string d4()
+  string e4()
+  string f4()
+  string g4()
+  string h4()
+  string i4()
+  string j4()
+  string a5()
+  string b5()
+  string c5()
+  string d5()
+  string e5()
+  string f5()
+  string g5()
+  string h5()
+  string i5()
+  string j5()
+  string a6()
+  string b6()
+  string c6()
+  string d6()
+  string e6()
+  string f6()
+  string g6()
+  string h6()
+  string i6()
+  string a7()
+}
