@@ -1,0 +1,77 @@
+namespace java com.twitter.test
+#@namespace scala com.twitter.test
+
+service NonOptimalServiceMethodExecptionsWarn {
+  string testFunc() throws (
+    1:  string  a,
+    2:  string  b,
+    3:  string  c,
+    4:  string  d,
+    5:  string  e,
+    6:  string  f,
+    7:  string  g,
+    8:  string  h,
+    9:  string  i,
+    10: string  j,
+    11: string  a1,
+    12: string  b1,
+    13: string  c1,
+    14: string  d1,
+    15: string  e1,
+    16: string  f1,
+    17: string  g1,
+    18: string  h1,
+    19: string  i1,
+    20: string  j1,
+    21: string  a2,
+    22: string  b2,
+    23: string  c2,
+    24: string  d2,
+    25: string  e2,
+    26: string  f2,
+    27: string  g2,
+    28: string  h2,
+    29: string  i2,
+    30: string  j2,
+    31: string  a3,
+    32: string  b3,
+    33: string  c3,
+    34: string  d3,
+    35: string  e3,
+    36: string  f3,
+    37: string  g3,
+    38: string  h3,
+    39: string  i3,
+    40: string  j3,
+    41: string  a4,
+    42: string  b4,
+    43: string  c4,
+    44: string  d4,
+    45: string  e4,
+    46: string  f4,
+    47: string  g4,
+    48: string  h4,
+    49: string  i4,
+    50: string  j4,
+    51: string  a5,
+    52: string  b5,
+    53: string  c5,
+    54: string  d5,
+    55: string  e5,
+    56: string  f5,
+    57: string  g5,
+    58: string  h5,
+    59: string  i5,
+    60: string  j5,
+    61: string  a6,
+    62: string  b6,
+    63: string  c6,
+    64: string  d6,
+    65: string  e6,
+    66: string  f6,
+    67: string  g6,
+    68: string  h6,
+    69: string  i6,
+    70: string  a7
+  )
+}
